init banner tabs for dashboard

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -26,7 +26,7 @@
             <span class="pull-right" *ngIf="showSystemRequirements"><i class="fa fa-chevron-up"></i></span>
           </h4>
         </div>
-        <div *ngIf="showSystemRequirements" class="card-block">
+        <div *ngIf="showSystemRequirements" class="card-body">
           <p>AMO Tools Desktop will operate on the following computers:</p>
           <ul>
             <li>
@@ -50,7 +50,7 @@
           <span class="pull-right" *ngIf="showUser"><i class="fa fa-chevron-up"></i></span>
           </h4>
         </div>
-          <div *ngIf="showUser" class="card-block">
+          <div *ngIf="showUser" class="card-body">
             <p>
               The tool is designed for industrial energy coordinators, plant managers, engineers,
               and personnel who are interested in improving system efficiency and measuring potential savings
@@ -68,7 +68,7 @@
            <span class="pull-right" *ngIf="showPSAT"><i class="fa fa-chevron-up"></i></span>
           </h4>
         </div>
-        <div *ngIf="showPSAT" class="card-block">
+        <div *ngIf="showPSAT" class="card-body">
             <p>
               The Pumping System Assessment Tool (PSAT), originally developed by Don Casada of Diagnostic Solutions, LLC,
               is a free desktop software tool to evaluate the potential energy savings opportunities of pumping systems
@@ -118,7 +118,7 @@
               <span class="pull-right" *ngIf="showPHAST"><i class="fa fa-chevron-up"></i></span>
           </h4>
         </div>
-        <div *ngIf="showPHAST" class="card-block">
+        <div *ngIf="showPHAST" class="card-body">
             <p>The Process Heating Assessment and Survey Tool (PHAST), originally developed by Dr. Arvind Thekdi of E3M, Inc.,
               Oak Ridge National Laboratory and the Industrial Heating Equipment Association (IHEA), introduces methods to
               improve thermal efficiency of heating equipment.<br>This tool helps industrial users survey process heating
@@ -155,7 +155,7 @@
             <span class="pull-right" *ngIf="showFAST"><i class="fa fa-chevron-up"></i></span>
           </h4>
         </div>
-        <div *ngIf="showFAST" class="card-block">
+        <div *ngIf="showFAST" class="card-body">
           <p>
             The Fan System Assessment Tool (FSAT) is a free online software tool that helps industrial users
             quantify energy use and savings opportunities in industrial fan systems.
