--- a/src/app/acknowledgments-page/acknowledgments-page.component.html
+++ b/src/app/acknowledgments-page/acknowledgments-page.component.html
@@ -6,7 +6,7 @@
         <div class="card-header">
           Acknowledgments
         </div>
-        <div class="card-block">
+        <div class="card-body">
           This tool was developed by staff at Oak Ridge National Laboratory (ORNL) and in collaboration with the U.S. Department of Energy.
           This software tool was funded by the U.S. Department of Energy's Office of Energy Efficiency and Renewable Energy under Oak Ridge National Laboratory Contract No. DE-AC05-00OR22725.
 
