--- a/src/app/assessment/assessment-menu/assessment-menu.component.html
+++ b/src/app/assessment/assessment-menu/assessment-menu.component.html
@@ -1,12 +1,9 @@
-
-
-
-<div class="row">
+<!-- <div class="row">
   <div class="col-12">
 
     <ol class="breadcrumb">
       <li *ngFor="let crumb of breadCrumbs; let first = first;">
-        <a  class="breadcrumb-item" *ngIf="first" (click)="goToDirectory(crumb)">
+        <a class="breadcrumb-item" *ngIf="first" (click)="goToDirectory(crumb)">
           All Assessments /
         </a>
         <a class="breadcrumb-item" *ngIf="!first" (click)="goToDirectory(crumb)">
@@ -17,12 +14,22 @@
     </ol>
 
   </div>
+</div> -->
+<div class="row">
+  <div class="col-12 tab-col">
+    <ul class="tabs subtabs dashboard">
+      <li class="fixed-tab-size" *ngFor="let crumb of breadCrumbs; let last = last;" [ngClass]="{'active': last}" (click)="goToDirectory(crumb)">
+        <a>
+          <span class="fa fa-folder-open-o" style="padding-right:8px;"></span>{{crumb.name}}</a>
+      </li><!---->
+    </ul>
+  </div>
 </div>
 
 
 
-<div class="row">
-  <div class="col-12">
+<div class="row justify-content-center" style="padding-top:3%">
+  <div class="col-10">
 
     <div class="table-header">
 
@@ -34,10 +41,12 @@
         <button [disabled]="!checkSelected()" type="button" class="btn btn-secondary" (click)="emitExport()">Export...</button>
 
         <button type="button" class="btn btn-link pull-right" (click)="emitImport()">Import...</button>
-      </div><!-- End .table-actions -->
+      </div>
+      <!-- End .table-actions -->
 
       <div class="header" *ngIf="view != 'settings'">
-        <label><input type="checkbox" [(ngModel)]="isAllSelected" (change)="signalSelectAll()"/> Select all</label>
+        <label>
+          <input type="checkbox" [(ngModel)]="isAllSelected" (change)="signalSelectAll()" /> Select all</label>
       </div>
 
     </div>
