--- a/src/app/calculator/pumps/pumps.component.css
+++ b/src/app/calculator/pumps/pumps.component.css
@@ -1,9 +1,15 @@
-a:not([href]):not([tabindex]):hover {
+
+.calculator-list a:not([href]):not([tabindex]):hover {
     color: blue;
     text-decoration: underline;
     cursor: pointer;
 }
 
-a:not([href]):not([tabindex]){
+.calculator-list a:not([href]):not([tabindex]){
     color: blue;
+}
+
+.calc-col{
+    padding-left: 0px;
+    padding-right: 0px;
 }
