--- a/src/app/calculator/pumps/pumps.component.html
+++ b/src/app/calculator/pumps/pumps.component.html
@@ -1,4 +1,28 @@
-<div *ngIf="getSelectedTool() == 'none'">
+<div class="row">
+    <div class="col-12 calc-col">    
+      <ul class="tabs subtabs psat">
+        <li [ngClass]="{'active': selectedTool == 'none'}">
+            <a (click)="changeCalcTab('none')">All Pump Calculators</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'system-curve'}">
+        <a (click)="changeCalcTab('system-curve')">System Curve</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'achievable-efficiency'}">
+        <a (click)="changeCalcTab('achievable-efficiency')">Achievable Pump Efficiency</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'specific-speed'}">
+          <a (click)="changeCalcTab('specific-speed')">Specific Speed</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'pump-curve'}">
+          <a (click)="changeCalcTab('pump-curve')">Pump Curve</a>
+        </li>
+    </ul>
+  </div>
+</div>
+
+
+
+<div *ngIf="selectedTool == 'none'">
 
   <div class="row">
     <div class="col-10  mx-auto">
@@ -6,15 +30,15 @@
         <h2>Pump Calculators</h2>
         <ul>
           <li>
-            <a (click)="showTool('head-tool')">Head Tool</a>
+            <a (click)="changeCalcTab('head-tool')">Head Tool</a>
             <p>Use head tool calculator to calculate pump head.</p>
           </li>
           <li>
-            <a (click)="showTool('system-curve')">System Curve</a>
+            <a (click)="changeCalcTab('system-curve')">System Curve</a>
             <p>Use system curve to graph your pumps flow.</p>
           </li>
           <li>
-            <a (click)="showTool('specific-speed')">Specific Speed</a>
+            <a (click)="changeCalcTab('specific-speed')">Specific Speed</a>
             <p>For each pump type there is an optimal specific speed based on size, flow rate, specific speed. Hydraulic Institute
               standards also include factors for wear and surface finish on wetted parts but these two factors are not considered
               in the PSAT calculations. Operation at the optimal specific speed allows a pump to operate at maximum efficiency.
@@ -24,12 +48,12 @@
             </p>
           </li>
           <li>
-            <a (click)="showTool('achievable-efficiency')">Pump Efficiency Curves</a>
+            <a (click)="changeCalcTab('achievable-efficiency')">Pump Efficiency Curves</a>
             <p>Determine the achievable pump efficiency for vaious pump styles which are based on the Hydraulic Institute (HI)
               standard ANSI/HI 1.3-2000.</p>
           </li>
           <li>
-            <a (click)="showTool('pump-curve')">Pump Curve</a>
+            <a (click)="changeCalcTab('pump-curve')">Pump Curve</a>
             <p>Use pump curve calculator to develop a pump curve and explore the effects of changes in head, flow, pump speed
               and impeller diameter</p>
           </li>
@@ -42,22 +66,22 @@
 </div>
 
 
-<div class="stand-alone-calc" *ngIf="getSelectedTool() == 'head-tool'">
+<div class="stand-alone-calc" *ngIf="selectedTool == 'head-tool'">
     <app-head-tool></app-head-tool>
 </div>
 
-<div class="stand-alone-calc tab-content" *ngIf="getSelectedTool() == 'system-curve'">
+<div class="stand-alone-calc tab-content" *ngIf="selectedTool == 'system-curve'">
   <app-system-curve></app-system-curve>
 </div>
 
-<div class="stand-alone-calc tab-content" *ngIf="getSelectedTool() == 'specific-speed'">
+<div class="stand-alone-calc tab-content" *ngIf="selectedTool == 'specific-speed'">
   <app-specific-speed></app-specific-speed>
 </div>
 
-<div class="stand-alone-calc tab-content" *ngIf="getSelectedTool() == 'achievable-efficiency'">
+<div class="stand-alone-calc tab-content" *ngIf="selectedTool == 'achievable-efficiency'">
     <app-achievable-efficiency></app-achievable-efficiency>
 </div>
 
-<div class="stand-alone-calc tab-content" *ngIf="getSelectedTool() == 'pump-curve'">
+<div class="stand-alone-calc tab-content" *ngIf="selectedTool == 'pump-curve'">
   <app-pump-curve></app-pump-curve>
 </div>
