--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -6,7 +6,7 @@
         <div class="card-header">
           Contact / Provide Feedback
         </div>
-        <div class="card-block">
+        <div class="card-body">
           <p>
             To report a bug or otherwise provide feedback, please email Gina Accawi at <a (click)="sendMail()">accawigk@ornl.gov</a>.
             Please include your operating system (e.g., Windows 10, Mac OS 10.12), a screenshot of the issue and download
