--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,54 +1,34 @@
 <div class="container-fluid">
     <div class="row dashboard-content" *ngIf="dashboardView != 'detailed-report'">
 
-        <div class="col-2 sidebar-bg" [ngClass]="{'modal-open': isModalOpen}">
+        <!-- <div class="col-2 sidebar-bg" [ngClass]="{'modal-open': isModalOpen}">
                 <app-sidebar *ngIf="allDirectories" [selectedCalculator]="selectedCalculator" [directory]="getAllDirectories()" [newDirEventToggle]="newDirEventToggle"
                     [workingDirectory]="getWorkingDirectory()" [dashboardView]="dashboardView" (directoryChange)="changeWorkingDirectory($event)"
                     (selectCalculator)="viewCalculator($event)" (emitGoHome)="goHome()" (emitShowAbout)="showAbout()" (emitShowAcknowledgments)="showAcknowledgments()"
                     (emitShowTutorials)="showTutorials()" (emitGoToSettings)="showSettings()" (emitGoToContact)="showContact()" (openModal)="openModal($event)">
                 </app-sidebar>
-        </div>
+        </div> -->
 
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'assessment-dashboard'">
-
-            <app-assessment-dashboard [directory]="workingDirectory" (directoryChange)="changeWorkingDirectory($event)" (deleteDataSignal)="showDeleteModal()"
-                (deleteCheckedItems)="showDeleteItemsModal()" (resetDataEmit)="showDeleteModal()" (emitNewDir)="newDir()" (genReport)="generateReport()"
-                (exportEmit)="exportSelected()" (importEmit)="showImportModal()">
+        <div class="col-12" *ngIf="allDirectories">
+            <app-dashboard-tabs></app-dashboard-tabs>
+            <app-assessment-dashboard *ngIf="dashboardView == 'assessment-dashboard'" [directory]="workingDirectory" (directoryChange)="changeWorkingDirectory($event)"
+                (deleteDataSignal)="showDeleteModal()" (deleteCheckedItems)="showDeleteItemsModal()" (resetDataEmit)="showDeleteModal()"
+                (emitNewDir)="newDir()" (genReport)="generateReport()" (exportEmit)="exportSelected()" (importEmit)="showImportModal()">
             </app-assessment-dashboard>
-
-        </div>
-
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'calculator'">
-            <app-calculator (selectCalculator)="viewCalculator($event)" [selectedCalculator]="selectedCalculator" [goCalcHome]="goCalcHome"></app-calculator>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'landing-screen'">
-            <app-landing-screen (hideLandingScreen)="hideScreen()" (selectCalculator)="viewCalculator($event)" [directory]="allDirectories"></app-landing-screen>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'tutorials'">
-            <app-tutorials></app-tutorials>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'about-page'">
-            <app-about-page></app-about-page>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'contact'">
-            <app-contact-page></app-contact-page>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'acknowledgments-page'">
-            <app-acknowledgments-page></app-acknowledgments-page>
-        </div>
-        <div class="col-10" *ngIf="allDirectories && dashboardView == 'settings'">
-
-            <div class="row">
-                <div class="col-10 mx-auto">
-                    <div class="content-container default-settings">
-
-                        <h2>Default Settings</h2>
-                        <app-assessment-settings [directory]="allDirectories" (resetDataEmit)="showDeleteModal($event)" (emitUpdateDirectory)="updateDir()"></app-assessment-settings>
-
-                    </div>
-                </div>
+            <app-calculator *ngIf="dashboardView == 'calculator'" (selectCalculator)="viewCalculator($event)"></app-calculator>
+            <app-landing-screen *ngIf="dashboardView == 'landing-screen'" (hideLandingScreen)="hideScreen()" (selectCalculator)="viewCalculator($event)"
+                [directory]="allDirectories"></app-landing-screen>
+            <app-tutorials *ngIf="dashboardView == 'tutorials'"></app-tutorials>
+            <app-acknowledgments-page *ngIf="dashboardView == 'acknowledgments-page'"></app-acknowledgments-page>
+            <div *ngIf="dashboardView == 'settings'" class="content-container default-settings">
+                <h2>Default Settings</h2>
+                <app-assessment-settings [directory]="allDirectories" (resetDataEmit)="showDeleteModal($event)" (emitUpdateDirectory)="updateDir()"></app-assessment-settings>
             </div>
-
+            <div *ngIf="dashboardView == 'about'">
+                <app-about-page *ngIf="aboutTab == 'about-app'"></app-about-page>
+                <app-contact-page *ngIf="aboutTab == 'contact'"></app-contact-page>
+                <app-acknowledgments-page *ngIf="aboutTab == 'acknowledgments'"></app-acknowledgments-page>
+            </div>
         </div>
     </div>
     <!--<div class="row">
