--- a/src/assets/styles/tabs.css
+++ b/src/assets/styles/tabs.css
@@ -26,6 +26,7 @@ Tabs
     .tabs.primary.phast li:nth-child(-n+2) a {
       border-top: #611f00 solid 4px;
     }
+
   .tabs.primary a {
     padding: 14px 10px;
     font-size: 14px;
@@ -71,7 +72,7 @@ Tabs
     background: #E5E7E9;
     cursor: pointer;
   }
-  .tabs.subtabs.phast .active a {
+  .tabs.subtabs .active a {
     font-weight: bold;
     /* border-right: #BF3D00 solid 2px;
     border-left: #BF3D00 solid 2px; */
@@ -85,11 +86,8 @@ Tabs
     border-bottom: #2980b9 solid 3px;
   }
 
-  .tabs.subtabs.psat .active a {
-    font-weight: bold;
-    /* border-right: #2980b9 solid 2px;
-    border-left: #2980b9 solid 2px; */
-    background: white;
+  .tabs.subtabs.dashboard {
+    border-bottom: #616A6B solid 3px;
   }
   
     .tabs.subtabs.progress-tabs a {
@@ -147,54 +145,3 @@ Tabs
     .calculator-margin{
         margin-top: 10%;
     }
-
-
-
-  /* Vertical Tabs */
-  /* .tabs.vertical {
-    margin-right: -1px;
-  }
-  .tabs.vertical a {
-    display: block;
-    padding: 10px;
-    border-bottom: #eaeaea solid 1px;
-    border-left: #eaeaea solid 1px;
-    border-top: #fff solid 1px;
-    border-right: #ccc solid 1px;
-  }
-    .tabs.vertical li:first-of-type a {
-      border-top: #eaeaea solid 1px;
-    }
-  .tabs.vertical a:hover {
-    text-decoration: none;
-  }
-  .tabs.vertical .active a {
-    color: #333;
-    font-weight: bold;
-    background: #fff;
-    border-color: #bbb;
-    border-style: solid;
-    border-width: 1px 0 1px 1px;
-  }
-  
-  .tabs.horizontal a {
-    display: block;
-    padding-right: 10px;
-    padding-left: 10px;
-    border-bottom: #ccc solid 1px;
-    border-top: #fff solid 1px;
-    border-right: #ccc solid 1px;
-    border-left: #ccc solid 1px;
-  }
-  .tabs.horizontal a:hover {
-    text-decoration: none;
-  }
-  .tabs.horizontal .active a {
-    color: #333;
-    font-weight: bold;
-    background: #fff;
-    border-color: #bbb;
-    border-style: solid;
-    border-width: 0 1px;
-  }
-   */
