--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1154,7 +1154,7 @@ Banner
     background: #BF3D00;
   }
   .banner.dashboard{
-    background: #616A6B;
+    background: #16A085;
   }
 
 .banner:after {
