--- a/src/app/dashboard/dashboard-tabs/dashboard-tabs.component.html
+++ b/src/app/dashboard/dashboard-tabs/dashboard-tabs.component.html
@@ -3,7 +3,7 @@
     <div class="pull-left">
       <div class="title">
         <h1>BPEATS</h1>
-        <!-- <small>Last modified: {{assessment.modifiedDate | date:'medium'}}</small> -->
+        <small>Better Plants Energy Assessment Tools Suite</small>
       </div>
     </div>
   </div>
