--- a/src/assets/styles/tabs.css
+++ b/src/assets/styles/tabs.css
@@ -87,7 +87,7 @@ Tabs
   }
 
   .tabs.subtabs.dashboard {
-    border-bottom: #616A6B solid 3px;
+    border-bottom: #16A085 solid 3px;
   }
   
     .tabs.subtabs.progress-tabs a {
