--- a/src/app/calculator/furnaces/furnaces.component.css
+++ b/src/app/calculator/furnaces/furnaces.component.css
@@ -2,12 +2,17 @@ p{
     font-size: medium;
 }
 
-a:not([href]):not([tabindex]):hover {
+.calculator-list a:not([href]):not([tabindex]):hover {
     color: blue;
     text-decoration: underline;
     cursor: pointer;
 }
 
-a:not([href]):not([tabindex]){
+.calculator-list a:not([href]):not([tabindex]){
     color: blue;
+}
+
+.calc-col{
+    padding-left: 0px;
+    padding-right: 0px;
 }
