--- a/src/app/calculator/furnaces/furnaces.component.html
+++ b/src/app/calculator/furnaces/furnaces.component.html
@@ -1,3 +1,29 @@
+<div class="row">
+    <div class="col-12 calc-col">    
+      <ul class="tabs subtabs phast">
+        <li [ngClass]="{'active': selectedTool == 'none'}">
+            <a (click)="changeCalcTab('none')">All Furnace Calculators</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'o2-enrichment'}">
+        <a (click)="changeCalcTab('o2-enrichment')">O2 Enrichment</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'efficiency-improvement'}">
+        <a (click)="changeCalcTab('efficiency-improvement')">Efficiency Improvement</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'energy-equivalency'}">
+          <a (click)="changeCalcTab('energy-equivalency')">Energy Equivalency</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'energy-use'}">
+          <a (click)="changeCalcTab('energy-use')">Flow Calculations Energy Use</a>
+        </li><!--
+        --><li [ngClass]="{'active': selectedTool == 'pre-assessment'}">
+          <a (click)="changeCalcTab('pre-assessment')">Pre-assessment / Screening Calculator</a>
+        </li>
+    </ul>
+  </div>
+</div>
+
+
 <div *ngIf="selectedTool == 'none'">
 
   <div class="row">
