--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
     <div class="row dashboard-content" *ngIf="dashboardView != 'detailed-report'">
 
         <div class="col-2 sidebar-bg p-0" [ngClass]="{'modal-open': isModalOpen}">
-            <app-sidebar *ngIf="allDirectories" [directory]="getAllDirectories()" [newDirEventToggle]="newDirEventToggle"
-                [workingDirectory]="getWorkingDirectory()" [dashboardView]="dashboardView" (directoryChange)="changeWorkingDirectory($event)" (openModal)="openModal($event)">
+            <app-sidebar *ngIf="allDirectories" [directory]="getAllDirectories()" [newDirEventToggle]="newDirEventToggle" [workingDirectory]="getWorkingDirectory()"
+                [dashboardView]="dashboardView" (directoryChange)="changeWorkingDirectory($event)" (openModal)="openModal($event)">
             </app-sidebar>
         </div>
 
@@ -40,6 +40,9 @@
         </div>
         <div class="col-10 dashboard-scroll scroll-item" *ngIf="allDirectories && dashboardView == 'custom-materials'">
             <app-custom-materials [settings]="workingDirectorySettings"></app-custom-materials>
+        </div>
+        <div class="col-10 dashboard-scroll scroll-item" *ngIf="allDirectories && dashboardView == 'custom-equipment'">
+            <app-custom-equipment></app-custom-equipment>
         </div>
     </div>
 </div>
